[package]
name = "logkv-rs"
version = "0.1.0"
authors = ["yixin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skiplist = "0.3.0"
async-std = "1.9.0"
protobuf = "2"
raft = {git="https://github.com/tikv/raft-rs.git"}
slog = "2.7.0"